RESOLVED FIXED163389
[GTK] WebKitWebPage URI not updated after URI is modified by InjectedBundlePageResourceLoadClient::willSendRequestForFrame
https://bugs.webkit.org/show_bug.cgi?id=163389
Summary [GTK] WebKitWebPage URI not updated after URI is modified by InjectedBundlePa...
Michael Catanzaro
Reported 2016-10-13 08:57:44 PDT
InjectedBundlePageResourceLoadClient::willSendRequestForFrame() allows clients to modify the ResourceRequest passed to it. We rely on this in the GTK+ API in order to allow a web extension to modify URLs before they are loaded. F Our WebKitWebPage's URI property is not updated when this happens. Follow-up to bug #146306.
Attachments
Patch (7.96 KB, patch)
2016-10-14 02:40 PDT, Carlos Garcia Campos
mcatanzaro: review+
Carlos Garcia Campos
Comment 1 2016-10-14 02:40:23 PDT
Michael Catanzaro
Comment 2 2016-10-14 11:34:36 PDT
(In reply to comment #0) > InjectedBundlePageResourceLoadClient::willSendRequestForFrame() allows > clients to modify the ResourceRequest passed to it. We rely on this in the > GTK+ API in order to allow a web extension to modify URLs before they are > loaded. F F? What were you thinking, myself?
Michael Catanzaro
Comment 3 2016-10-14 11:40:34 PDT
Comment on attachment 291603 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=291603&action=review > Tools/TestWebKitAPI/Tests/WebKit2Gtk/TestLoaderClient.cpp:408 > + void loadURI(const char* uri) Eventually we should start using override in our unit test classes.
Carlos Garcia Campos
Comment 4 2016-10-16 02:14:08 PDT
Note You need to log in before you can comment on or make changes to this bug.